# cpp2py

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  README.txt  TODO.txt  cpp2py.modulefile.in  cpp2pyvars.sh.in  requirements.txt
c++/cpp2py/: CMakeLists.txt  cpp2py.hpp  exceptions.cpp  exceptions.hpp  get_module.hpp  macros.hpp  misc.cpp  misc.hpp  numpy_proxy.cpp  numpy_proxy.hpp  py_converter.hpp  py_stream.hpp  pyref.hpp  signal_handler.cpp  signal_handler.hpp  traits.hpp
c++/cpp2py/converters/: basic_types.hpp  complex.hpp  function.hpp  map.hpp  optional.hpp  pair.hpp  set.hpp  span.hpp  std_array.hpp  string.hpp  tuple.hpp  variant.hpp  vector.hpp
cmake/: CMakeLists.txt  Cpp2PyConfig.cmake.in  FindLibClang.cmake  FindPython.cmake
cmake/compatibility/: FindPython.cmake
cpp2cxx/: CMakeLists.txt  __init__.py  cpp2cxx.py  ess.cpp
cpp2py/: CMakeLists.txt  __init__.py  clang_parser.py  compiler.py  converters.py  cpp2desc.py  cpp2py_info_base.py  dependency_analyzer.py  doc.py  libclang_config.py.in  magic.py  onfly.py  processed_doc.py  util.py  wrap_generator.py
cpp2py/mako/: converters.cxx  converters.hxx  desc.py  wrap.cxx
cpp2rst/: CMakeLists.txt  __init__.py  cpp2rst.py  doc.py  example.py  global_vars.py  processed_doc.py  render_fnt.py  renderers.py  synopsis.py  util.py
doc/ipynb_magic/: 1-SimpleFunction.ipynb  2-TriqsGf.ipynb  3-LittleClass.ipynb  4-Parameters.ipynb  5-IsingSpinQMC.ipynb
include/: CMakeLists.txt  cpp2py.hpp
include/cpp2py/: get_module.hpp  misc.hpp  py_converter.hpp  py_stream.hpp  pyref.hpp  python.hpp
include/cpp2py/converters/: basic_types.hpp  complex.hpp  function.hpp  std_array.hpp  string.hpp  tuple.hpp  variant.hpp
lib/: CMakeLists.txt  exceptions.cpp  h5_reader.hpp  signal_handler.cpp
test/: inl.py  test_onfly.py
